--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "{0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ.\n\n<b>✫ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "<b>ʜᴇʟʟᴏ, {0}...🥀</b>\n\n<b>ɪ ᴀᴍ ᴀ ꜰᴀꜱᴛ ᴀɴᴅ ᴘᴏᴡᴇʀꜰᴜʟ ᴀᴅᴠᴀɴᴄᴇᴅ ᴀʟʟ ɪɴ ᴏɴᴇ ʀᴏʙᴏᴛ ᴀ ᴠᴇʀʏ ʜᴇʟᴘꜰᴜʟ ʙᴏᴛ ꜰᴏʀ ʏᴏᴜʀ ɢʀᴏᴜᴘꜱ ᴡɪᴄʜ ᴄᴀɴ ʜᴇʟᴘ ʏᴏᴜ ᴛᴏ ᴍᴀɴᴀɢᴇ ᴀɴᴅ ꜱᴇᴄᴜʀᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘꜱ.</b>\n\n<b>ɪ ʜᴀᴠᴇ ꜱᴏᴍᴇ ᴀᴡꜱᴏᴍᴇ ꜰᴜɴɴʏ ᴀɴᴅ ʜᴇʟᴘꜰᴜʟ ᴄᴏᴍᴍᴀɴᴅꜱ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ᴀʙɪʟɪᴛɪᴇꜱ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ ᴍʏ ᴄᴏᴍᴍᴀɴᴅꜱ.</b>"
+start_2 : "<b>ʜᴇʏ, {0}...⚡</b>\n\n<b>ɪ ᴀᴍ ᴀɴɪᴍᴇ ᴛʜᴇᴍᴇᴅ ꜰᴀꜱᴛ ᴀɴᴅ ᴘᴏᴡᴇʀꜰᴜʟ ᴀᴅᴠᴀɴᴄᴇᴅ ᴀʟʟ ɪɴ ᴏɴᴇ ʀᴏʙᴏᴛ ᴀ ᴠᴇʀʏ ʜᴇʟᴘꜰᴜʟ ʙᴏᴛ ꜰᴏʀ ʏᴏᴜʀ ɢʀᴏᴜᴘꜱ ᴡɪᴄʜ ᴄᴀɴ ʜᴇʟᴘ ʏᴏᴜ ᴛᴏ ᴍᴀɴᴀɢᴇ ᴀɴᴅ ꜱᴇᴄᴜʀᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘꜱ.</b>\n\n<b>ɪ ʜᴀᴠᴇ ꜱᴏᴍᴇ ᴀᴡꜱᴏᴍᴇ ꜰᴜɴɴʏ ᴀɴᴅ ʜᴇʟᴘꜰᴜʟ ᴄᴏᴍᴍᴀɴᴅꜱ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ᴄᴏᴍᴍᴀɴᴅꜱ ʙᴜᴛᴛᴏɴ ᴛᴏ ᴄᴀɴ ꜱᴇᴇ ʏᴏᴜ ᴍʏ ᴘᴏᴡᴇʀꜱ.</b>"
 start_3 : "ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "🎄 <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 🎄\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -135,7 +135,7 @@ cplay_5 : "ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "» ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "» ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "🦋"
+play_1 : "⚡"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -174,8 +174,8 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "➲ <b>𝗔𝗻𝘆𝗮 ⫪ 𝗙𝗼𝗿𝗴𝗲𝗿 Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ Nᴏᴡ.. 🥀 |</b>\n\n<b>Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}"
-stream_2 : "➲ <b>𝗔𝗻𝘆𝗮 ⫪ 𝗙𝗼𝗿𝗴𝗲𝗿 Sᴛᴀʀᴛᴇᴅ Sᴛʀʀᴀᴍɪɴɢ Nᴏᴡ.. 🥀 |</b>\n\n<b>Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
+stream_1 : "➲ <b>❂𝐊𝐚𝐧𝐞𝐤𝐢 ꋊ ɢʜᴏᴜʟ⋆ Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ Nᴏᴡ.. 🥀 |</b>\n\n<b>Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}"
+stream_2 : "➲ <b>❂𝐊𝐚𝐧𝐞𝐤𝐢 ꋊ ɢʜᴏᴜʟ⋆ Sᴛᴀʀᴛᴇᴅ Sᴛʀʀᴀᴍɪɴɢ Nᴏᴡ.. 🥀 |</b>\n\n<b>Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
 
 
 CLOSE_BUTTON  : "🗑ᴄʟᴏsᴇ🗑"
@@ -184,10 +184,10 @@ NEXT_PAGE: ">"
 BACK_PAGE: "<"
 
 
-S_B_1 : "⛩️𝗛𝗜𝗝𝗔𝗖𝗞 𝗠𝗘⛩️"
-S_B_2 : "𝗦𝗨𝗣𝗣𝗢𝗥𝗧⚡"
-S_B_3 : "⛩️𝗛𝗜𝗝𝗔𝗖𝗞 𝗠𝗘⛩️"
-S_B_4 : "𝗔𝗕𝗜𝗟𝗜𝗧𝗜𝗘𝗦📚"
+S_B_1 : "ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ"
+S_B_2 : "ꜱᴜᴘᴘᴏʀᴛ"
+S_B_3 : "ꜱᴜᴍᴍᴏɴ ᴍᴇ"
+S_B_4 : "ᴄᴏᴍᴍᴀɴᴅꜱ"
 S_B_5 : "ᴜᴘᴅᴀᴛᴇꜱ"
 S_B_6 : "ʀᴇᴘᴏʀᴛ"
 S_B_7 : "ʀᴇᴘᴏ"
